--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-graphql": "^0.9.0",
     "graphql": "^14.6.0",
     "graphql-tools": "^4.0.6",
+    "moment": "^2.24.0",
     "mongo": "^0.1.0",
     "mongodb": "^3.5.2",
     "standard": "^14.3.1"
